--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df = None"
+    "to_concat combined_df = None"
    ]
   },
   {
