--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_concat =[df1,df2combined_df = None"
+    "to_concat =[df1, df2, df3]combined_df = None"
    ]
   },
   {
