automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_concat =[df1, df2, df3]combined_df = None"
+    "to_concat =[df1, df2, df3]\n",
+    "combined_df =pd.conca"
    ]
   },
   {
