automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "to_concat =[df1, df2, df3]\n",
-    "combined_df =pd.conca"
+    "combined_df =pd.concat(to_concat)"
    ]
   },
   {
