automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,13 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "to_concat =[df1, df2, df3]\n",
     "combined_df =pd.concat(to_concat)\n",
-    "type(to_concat)"
+    "#type(to_concat)"
    ]
   },
   {
