--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "to_concat =[df1, df2, df3]\n",
+    "to_concat =(df1, df2, df3\n",
     "combined_df =pd.concat(to_concat)\n",
     "#type(to_concat)"
    ]
