automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,23 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "to_concat =(df1, df2, df3\n",
+    "to_concat =(df1, df2, df3)\n",
     "combined_df =pd.concat(to_concat)\n",
+    "combi\n",
     "#type(to_concat)"
    ]
   },
