--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1_and_4 = None\n",
+    "df1_and_4 = df1.join\n",
     "df1_and_4"
    ]
   },
