--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,7 @@
     }
    ],
    "source": [
-    "df1_and_4 = df1.join(df4, how ='inner')\n",
+    "df1_and_4 = df1.join(df4, how ='inner', axis =1)\n",
     "df1_and_4"
    ]
   },
