--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "df1_and_4 = df1.join(df4, how ='inner',axis =1)\n",
+    "df1_and_4 = df1.join(df4, axis =1 how ='inner',axis =1)\n",
     "df1_and_4"
    ]
   },
