--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "df1_and_4 = df1.join((df4), axis=1,how ='inner')\n",
+    "df1_and_4 = pd_concat(df1,df4), axis=1,how ='inner')\n",
     "df1_and_4"
    ]
   },
