automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "df1_and_4 = pd.concat((df1,df4), axis=1,how ='inner')\n",
+    "df1_and_4 = pd.concat((df1,df4), axis=1, how )\n",
     "df1_and_4"
    ]
   },
