--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "df1_and_4 = pd.concat((df1,df4), axis=1)\n",
+    "df1_and_4 = df1.j((df1,df4), axis=1)\n",
     "df1_and_4"
    ]
   },
