automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -356,13 +356,13 @@
        "7  NaN  NaN  NaN  NaN   B7   D7   F7"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1_and_4 = df1.j((df1,df4), axis=1)\n",
+    "df1_and_4 = pd.concat((df1,df4), axis=1)\n",
     "df1_and_4"
    ]
   },
